--- a/index.html
+++ b/index.html
@@ -2,10 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>yaorongke</title>
+    <title>Title</title>
 </head>
+<style>
+    .demo{
+        color:darkkhaki;
+        text-align:left;
+        font-size: 50px;
+
+    }
+</style>
 <body>
-    <h1>yaorongke的个人主页</h1>
-    <h1>Hello ~</h1>
+<h1  style="color:red;font-family: 楷体;text-align: center">这是一级标题</h1>
+<p class="demo"style=“font-family:宋体”>baby shark dooooooooo</p><br>
+<botton class="demo">今晚一起吗</botton>
+<br>
+<input class="demo"type="radio" name="h">yes！
+<input class="demo"type="radio" name="h">come on！
+<input class="demo"type="radio" name="h">I'm coming！
+<input class="demo"type="radio" name="h">I can't wait！
+<p class="demo">你想什么时候来呢?</p>
+<input class="demo" type="checkbox" name="time" value="day">20:00
+<input class="demo" type="checkbox" name="time" value="night">21:00
+<input class="demo" type="checkbox" name="time" value="night">22:00
+<input class="demo" type="checkbox" name="time" value="night">23:00
+<input class="demo" type="checkbox" name="time" value="night">24:00
+
+
+
+
+
 </body>
 </html>
