Fix paragraph text and button tag in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </style>
 <body>
 <h1  style="color:red;font-family: 楷体;text-align: center">这是一级标题</h1>
-<p class="demo"style=“font-family:宋体”>baby shark dooooooooo</p><br>
+<p class="demo"style=“font-family:宋体”>baby shark doo</p><br>
 <botton class="demo">今晚一起吗</botton>
 <br>
 <input class="demo"type="radio" name="h">yes！
